--- a/.github/workflows/reddit_scraper.yml
+++ b/.github/workflows/reddit_scraper.yml
@@ -123,12 +123,17 @@ jobs:
         DROPBOX_APP_KEY: ${{ secrets.DROPBOX_APP_KEY }}
         DROPBOX_APP_SECRET: ${{ secrets.DROPBOX_APP_SECRET }}
       run: |
-        if [ ! -f "reddit/file_log.json" ] && [ -n "$DROPBOX_REFRESH_TOKEN" ] && [ "$DROPBOX_REFRESH_TOKEN" != "None" ]; then
-          echo "S3 bucket is empty and Dropbox credentials available — bootstrapping from Dropbox..."
+        # Count actual backup files (markdown/media), excluding file_log.json itself
+        backup_count=$(find reddit/ -type f ! -name "file_log.json" ! -name ".*" 2>/dev/null | wc -l | tr -d ' ')
+        echo "Local backup files after S3 download: $backup_count"
+
+        if [ "$backup_count" -eq 0 ] && [ -n "$DROPBOX_REFRESH_TOKEN" ] && [ "$DROPBOX_REFRESH_TOKEN" != "None" ]; then
+          echo "S3 has no backup files and Dropbox credentials available — bootstrapping from Dropbox..."
           python dropbox_utils.py --download
-          echo "Bootstrap complete. Data will be uploaded to S3 at the end of this run."
+          new_count=$(find reddit/ -type f ! -name "file_log.json" ! -name ".*" 2>/dev/null | wc -l | tr -d ' ')
+          echo "Bootstrap complete. Downloaded $new_count files from Dropbox. Data will be uploaded to S3 at the end of this run."
         else
-          echo "Skipping bootstrap: S3 already has data or no Dropbox credentials."
+          echo "Skipping bootstrap: S3 already has $backup_count backup files or no Dropbox credentials."
         fi
 
     # Process Reddit data
