perf: Optimize processing pipeline — reduce sleep, I/O, and validation overhead
- Reduce dynamic_sleep base from 50ms to 5ms (PRAW handles API rate limiting)
- Increase file_log checkpoint interval from 50 to 200 items (75% less I/O)
- Skip TruffleHog secret scan on scheduled cron runs (no new code pushed)
- Increase gallery download parallelism from 3 to 10 workers
- Skip URL validation for trusted media CDN domains (i.redd.it, v.redd.it, i.imgur.com)
- Centralize pipeline constants in constants.py

--- a/.github/workflows/reddit_scraper.yml
+++ b/.github/workflows/reddit_scraper.yml
@@ -37,6 +37,7 @@ jobs:
       timeout-minutes: 1
 
     - name: TruffleHog OSS
+      if: github.event_name != 'schedule'
       uses: trufflesecurity/trufflehog@main
       with:
         extra_args: --only-verified
